# Projeto-calculadora

./: README.md  docker-compose.yml
Back_end/: Decidindo oq criar no site.md  DockerFile  Projeto_calculadora.md  README.md  api.py  pyproject.toml
Front_end/: aposentadoria.html  index.html  script.js  style.css
