[project]
name = "cursoebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
# REMOVA A LINHA DE DEPENDENCIES DAQUI!

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = {extras = ["standard"], version = "^0.115.0"} 
uvicorn = "^0.30.0"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"